--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-scripts": "3.3.0",
+    "simplex-noise": "^2.4.0",
+    "three": "^0.112.1",
     "typescript": "^3.7.5"
   },
   "scripts": {
@@ -35,5 +37,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/three": "^0.103.2"
   }
 }
