--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
     "@types/node": "^12.12.25",
     "@types/react": "^16.9.17",
     "@types/react-dom": "^16.9.4",
+    "@types/react-router-dom": "^5.1.3",
+    "bootstrap": "^4.4.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
+    "react-transition-group": "^4.3.0",
     "simplex-noise": "^2.4.0",
     "three": "^0.112.1",
     "typescript": "^3.7.5"
@@ -39,6 +43,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-transition-group": "^4.2.3",
     "@types/three": "^0.103.2"
   }
 }
