--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@icons-pack/react-simple-icons": "^4.0.0",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.3",
     "@testing-library/user-event": "^12.6.2",
@@ -10,9 +11,12 @@
     "@types/node": "^12.19.15",
     "@types/react": "^16.14.2",
     "@types/react-dom": "^16.9.10",
+    "node-sass": "^4.14.1",
     "react": "^17.0.1",
+    "react-awesome-reveal": "^3.7.0",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.1",
+    "react-typist": "^2.0.5",
     "typescript": "^4.1.3",
     "web-vitals": "^0.2.4"
   },
@@ -39,5 +43,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react-typist": "^2.0.1"
   }
 }
