--- a/package.json
+++ b/package.json
@@ -11,12 +11,19 @@
     "@types/node": "^12.19.15",
     "@types/react": "^16.14.2",
     "@types/react-dom": "^16.9.10",
+    "@types/react-router-dom": "^5.1.7",
+    "@types/react-transition-group": "^4.4.0",
+    "gh-pages": "^3.1.0",
     "node-sass": "^4.14.1",
     "react": "^17.0.1",
     "react-awesome-reveal": "^3.7.0",
     "react-dom": "^17.0.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "react-spring": "^8.0.27",
+    "react-transition-group": "^4.4.1",
     "react-typist": "^2.0.5",
+    "three": "^0.126.0",
     "typescript": "^4.1.3",
     "web-vitals": "^0.2.4"
   },
@@ -24,7 +31,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "publish": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -45,6 +53,7 @@
     ]
   },
   "devDependencies": {
-    "@types/react-typist": "^2.0.1"
+    "@types/react-typist": "^2.0.1",
+    "@types/three": "^0.125.3"
   }
 }
