--- a/package.json
+++ b/package.json
@@ -3,28 +3,43 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@icons-pack/react-simple-icons": "^4.0.0",
+    "@icons-pack/react-simple-icons": "^4.1.0",
     "@testing-library/jest-dom": "^5.11.9",
-    "@testing-library/react": "^11.2.3",
-    "@testing-library/user-event": "^12.6.2",
+    "@testing-library/react": "^11.2.5",
+    "@testing-library/user-event": "^12.7.3",
+    "@tweenjs/tween.js": "^18.6.4",
     "@types/jest": "^26.0.20",
-    "@types/node": "^12.19.15",
-    "@types/react": "^16.14.2",
-    "@types/react-dom": "^16.9.10",
+    "@types/node": "^12.20.4",
+    "@types/react": "^16.14.4",
+    "@types/react-dom": "^16.9.11",
     "@types/react-router-dom": "^5.1.7",
-    "@types/react-transition-group": "^4.4.0",
+    "@types/react-scroll": "^1.8.2",
+    "@types/react-syntax-highlighter": "^13.5.0",
+    "@types/react-transition-group": "^4.4.1",
     "gh-pages": "^3.1.0",
     "node-sass": "^4.14.1",
+    "prettier": "^2.2.1",
+    "raw-loader": "^4.0.2",
     "react": "^17.0.1",
     "react-awesome-reveal": "^3.7.0",
+    "react-code-blocks": "0.0.8",
     "react-dom": "^17.0.1",
+    "react-icons": "^4.2.0",
+    "react-markdown": "^5.0.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "react-scroll": "^1.8.1",
     "react-spring": "^8.0.27",
+    "react-syntax-highlighter": "^15.4.3",
     "react-transition-group": "^4.4.1",
     "react-typist": "^2.0.5",
+    "remark-code-blocks": "^2.0.1",
+    "remark-gfm": "^1.0.0",
+    "remark-slug": "^6.0.0",
+    "remark-toc": "^7.2.0",
     "three": "^0.126.0",
-    "typescript": "^4.1.3",
+    "typescript": "^4.2.2",
+    "unist-builder": "^2.0.3",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
@@ -32,7 +47,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "publish": "gh-pages -d build"
+    "publish": "npm run build && cp ./src/CNAME build/ && gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
