--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-transition-group": "^4.4.1",
     "react-typist": "^2.0.5",
     "remark-code-blocks": "^2.0.1",
+    "remark-external-links": "^8.0.0",
     "remark-gfm": "^1.0.0",
     "remark-slug": "^6.0.0",
     "remark-toc": "^7.2.0",
@@ -47,7 +48,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "publish": "npm run build && cp ./src/CNAME build/ && gh-pages -d build"
+    "publish": "npm run build --prod && cp ./src/CNAME build/ && gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
