--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/react-transition-group": "^4.4.1",
     "gh-pages": "^3.1.0",
     "node-sass": "^4.14.1",
+    "pixi.js": "^5.3.8",
     "prettier": "^2.2.1",
     "raw-loader": "^4.0.2",
     "react": "^17.0.1",
@@ -26,6 +27,7 @@
     "react-dom": "^17.0.1",
     "react-icons": "^4.2.0",
     "react-markdown": "^5.0.3",
+    "react-pixi-fiber": "^0.14.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "react-scroll": "^1.8.1",
