--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
     "@types/node": "^12.20.6",
     "@types/react": "^16.14.5",
     "@types/react-dom": "^16.9.11",
+    "@types/react-responsive": "^8.0.2",
     "@types/react-router-dom": "^5.1.7",
     "@types/react-scroll": "^1.8.2",
-    "@types/react-syntax-highlighter": "^13.5.0",
     "@types/react-transition-group": "^4.4.1",
     "devicon": "^2.10.1",
     "gh-pages": "^3.1.0",
@@ -31,11 +31,11 @@
     "react-json-view": "latest",
     "react-markdown": "^5.0.3",
     "react-pixi-fiber": "^0.14.2",
+    "react-responsive": "^8.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "react-scroll": "^1.8.2",
     "react-spring": "^8.0.27",
-    "react-syntax-highlighter": "^15.4.3",
     "react-transition-group": "^4.4.1",
     "react-typist": "^2.0.5",
     "remark-code-blocks": "^2.0.1",
